fixes scrollbars on deleted posts

--- a/less/topic.less
+++ b/less/topic.less
@@ -16,12 +16,11 @@
 				-moz-opacity: 0.30;
 				opacity: 0.30;
 				height: 30px;
-				overflow-y: hidden;
+				overflow: hidden;
 			}
 
 			&.deleted-expanded {
 				height: 100%;
-				overflow-y: default;
 			}
 		}
 	}
